@@ -61,7 +61,7 @@ $options
 		->section("Design")
 		->open_outersection()
 			->checkbox($themeslug."_responsive_design", "Responsive Design", array('default' => true))
-			->select($themeslug."_color_scheme", "Select a Color Scheme", array( 'options' => array("grey" => "Grey (default)", "green" => "Green"), 'default' => 'grey'))
+			->select($themeslug."_color_scheme", "Select a Skin Color", array( 'options' => array("grey" => "Grey (default)", "green" => "Green"), 'default' => 'grey'))
 		->close_outersection()
 		->subsection("Typopgraphy")
 			->select($themeslug."_font", "Choose a Font", array( 'options' => array("Arial" => "Arial (default)", "Courier New" => "Courier New", "Georgia" => "Georgia", "Helvetica" => "Helvetica", "Lucida Grande" => "Lucida Grande", "Tahoma" => "Tahoma", "Times New Roman" => "Times New Roman", "Verdana" => "Verdana", "Maven+Pro" => "Maven Pro", "Ubuntu" => "Ubuntu")))
@@ -69,11 +69,11 @@ $options
 		->subsection("Background")
 			->images($themeslug."_background_image", "Select a background", array( 'options' => array(  'dark' => TEMPLATE_URL . '/images/backgrounds/thumbs/dark.png', 'wood' => TEMPLATE_URL . '/images/backgrounds/thumbs/wood.png', 'default' => TEMPLATE_URL . '/images/backgrounds/thumbs/noise.png'), 'default' => 'default'))
 			->checkbox($themeslug."_custom_background", "Toggle to use a custom background")
+			->color($themeslug."_background_color", "Custom Background Color")
 			->upload($themeslug."_background_upload", "Background Image")
-			->radio($themeslug."_bg_image_position", "Select the Image Position", array( 'options' => array("top left" => "Left", "top center" => "Center", "top right" => "Right")))
-			->radio($themeslug."_bg_image_repeat", "Select the Image Repeat", array( 'options' => array("repeat" => "Tile", "repeat-x" => "Tile Horizontally", "repeat-y" => "Tile Vertically", "no-repeat" => "No Tile")))
-			->radio($themeslug."_bg_image_attachment", "Select the Image Attachment", array( 'options' => array("scroll" => "Scroll", "fixed" => "Fixed")))
-			->color($themeslug."_background_color", "Select a Background Color")
+			->radio($themeslug."_bg_image_position", "Image Position", array( 'options' => array("top left" => "Left", "top center" => "Center", "top right" => "Right")))
+			->radio($themeslug."_bg_image_repeat", "Image Repeat", array( 'options' => array("repeat" => "Tile", "repeat-x" => "Tile Horizontally", "repeat-y" => "Tile Vertically", "no-repeat" => "No Tile")))
+			->radio($themeslug."_bg_image_attachment", "Image Attachment", array( 'options' => array("scroll" => "Scroll", "fixed" => "Fixed")))
 		->subsection_end()
 		->subsection("Custom Colors")
 			->color($themeslug."_sitetitle_color", "Site Title Color")
@@ -144,7 +144,7 @@ TEMPLATE_URL . '/images/social/thumbs/icons-default.png' ), 'default' => 'defaul
 			->checkbox($themeslug."_show_gplus", "Show Google Plus One Button")
 		->subsection_end()
 		->subsection("Blog Slider")
-			->select($themeslug.'_slider_category', 'Select the post category', array( 'options' => $blogoptions ))
+			->select($themeslug.'_slider_category', 'Post Category', array( 'options' => $blogoptions ))
 			->text($themeslug."_slider_posts_number", "Number of Featured Blog Posts")
 			->text($themeslug."_slider_delay", "Slider Delay")
 			->checkbox($themeslug."hide_slider_navigation", "Slider Navigation" , array('default' => true))
